# LIA

./: .gitignore  :memory:  README.md  agent_memory.db  pytest.ini  test_lia_gemini.py
_archive/: GUIDE_TESTS_ETAPE_2_6.md  README.md  env.example  run_all_tests.py
_archive/simulation_service/: .gitignore  GUIDE_INSTALLATION.md  INSTALL_GPU.md  README.md  SOLUTION_GPU.md  check_gpu.py  lia-sim.bat  lia-sim.ps1  pyproject.toml  requirements-test.txt  requirements.txt  results.json  run_tests.py  start-server.bat  start-server.ps1  test-cli.ps1  test_session_file.py  test_torch_install.py
_archive/simulation_service/data/: scenarios.json
_archive/simulation_service/src/simulation_service/: __init__.py  adapters.py  api.py  autonomous_scheduler.py  cli.py  config.py  dashboard.py  main.py  metrics.py  orchestrator.py  protocol.py  schemas.py  session.py
_archive/simulation_service/src/simulation_service/portals/: __init__.py  autonomous.py  human.py  multi_agent.py
_archive/simulation_service/tests/: __init__.py  test_api.py  test_autonomous_scheduler.py  test_local_llm_adapter.py  test_metrics.py  test_protocol.py
autonomy/: __init__.py  runner.py
config/: api.conf.example
core/: README.md  README_CHAT.md  __init__.py  action_executor.py  architecture_graph.py  audio_brain.py  autonomous_actions.py  autonomy_brain.py  autonomy_models.py  autonomy_scheduler.py  capability_gap_resolver.py  code_brain.py  cognitive_metrics.py  cognitive_models.py  cognitive_optimizer.py  cognitive_planner.py  cognitive_safeguards.py  config.py  contextual_action_filter.py  (+21 more)
(+308 files in other folders)
