[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulation-service"
version = "0.1.0"
description = "Service de simulation multi-agent pour LIA"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.110.2",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "httpx==0.27.0",
    "jsonschema==4.22.0",
    "python-dateutil==2.9.0",
    "click==8.1.7",
    "rich==13.7.0",
    "openai==1.12.0",
    "anthropic==0.18.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
    "pytest-asyncio==0.23.6",
]

[project.scripts]
lia-sim = "simulation_service.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
